--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
             action is totally skipped in the first case (Fig 13).
           </p>
           <p>
-            <b>Impact:</b> his subtle miss can have a significant de-synchronization impact if the 
+            <b>Impact:</b> This subtle miss can have a significant de-synchronization impact if the 
             COTS implementation considers one of them ignoring the other.
           </p>
         </div>
