--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+
+
   <title>CellularLint</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
@@ -176,6 +180,16 @@
             and can leave implementations subject to vulnerabilities and 
             interoperability issues.
           </p>
+          <div class="colorful-box">
+            <div class="text-block">
+              <h2>Title 1</h2>
+              <p>This is the first text block. You can replace this with your content.</p>
+            </div>
+            <div class="text-block">
+              <h2>Title 2</h2>
+              <p>This is the second text block. You can replace this with your content.</p>
+            </div>
+          </div>
           <p>
             <b>Inconsistency to exploit:</b> In the case of T<sub>1</sub>, the specification 
             states after the security context has been established, the UE
