--- a/index.html
+++ b/index.html
@@ -180,14 +180,14 @@
             and can leave implementations subject to vulnerabilities and 
             interoperability issues.
           </p>
-          <div class="colorful-box">
-            <div class="text-block">
-              <h2>Title 1</h2>
-              <p>This is the first text block. You can replace this with your content.</p>
+          <div class="custom-box">
+            <div class="custom-text-block">
+                <h2>Title 1</h2>
+                <p>This is the first text block. You can replace this with your content.</p>
             </div>
-            <div class="text-block">
-              <h2>Title 2</h2>
-              <p>This is the second text block. You can replace this with your content.</p>
+            <div class="custom-text-block">
+                <h2>Title 2</h2>
+                <p>This is the second text block. You can replace this with your content.</p>
             </div>
           </div>
           <p>
