--- a/index.html
+++ b/index.html
@@ -182,12 +182,15 @@
           </p>
           <div class="custom-box">
             <div class="custom-text-block">
-                <h2>Title 1</h2>
-                <p>This is the first text block. You can replace this with your content.</p>
+                <p>T<sub>1</sub>: From this time onward the UE shall cipher and integrity protect all NAS
+                signalling messages with the selected NAS ciphering and NAS integrity algorithms.
+                </p>
             </div>
             <div class="custom-text-block">
-                <h2>Title 2</h2>
-                <p>This is the second text block. You can replace this with your content.</p>
+                <p>T<sub>2</sub>: From this time onward, all NAS messages exchanged between the UE and
+                  the MME are sent integrity protected and except for the messages specified in
+                  clause 4.4.5, all NAS messages exchanged between the UE and the MME are
+                  sent ciphered</p>
             </div>
           </div>
           <p>
