--- a/index.html
+++ b/index.html
@@ -705,20 +705,20 @@
             service_reject the service attempt counter is completely ignored in the description.
             This may potentially cause interoperability among different vendor implementations.
           </p>
-          <div class="custom-box">
-            <div class="custom-text-block">
-                <p>T<sub>1</sub>: From this time onward the UE shall cipher and integrity protect all NAS
+          <!--div class="custom-box"-->
+            <!--div class="custom-text-block"-->
+                <!--p-->T<sub>1</sub>: From this time onward the UE shall cipher and integrity protect all NAS
                 signalling messages with the selected NAS ciphering and NAS integrity algorithms.
-                </p>
-            </div>
-            <div class="custom-text-block">
-                <p>T<sub>2</sub>: From this time onward, all NAS messages exchanged between the UE and
+                <!--/p-->
+            <!--/div-->
+            <!--div class="custom-text-block"-->
+                <!--p-->T<sub>2</sub>: From this time onward, all NAS messages exchanged between the UE and
                   the MME are sent integrity protected and except for the messages specified in
                   clause 4.4.5, all NAS messages exchanged between the UE and the MME are
                   sent ciphered
-                </p>
-            </div>
-          </div>
+                <!--/p-->
+            <!--/div-->
+          <!--/div-->
         </div>
       </div>
     </div>
