--- a/index.html
+++ b/index.html
@@ -468,13 +468,13 @@
             <div class="custom-text-block">
                 <p>T<sub>1</sub>: : #13 (Roaming not allowed in this tracking area) 
                   The UE shall set the 5GS update status to 5U3 ROAMING NOT ALLOWED (and shall store it according
-                  to subclause5.1.3.2.2) and shall delete 5G-GUTI, last visited registered TAI, TAI list and ngKSI.
+                  to subclause 5.1.3.2.2) and shall delete 5G-GUTI, last visited registered TAI, TAI list and ngKSI.
                 </p>
             </div>
             <div class="custom-text-block">
                 <p>T<sub>2</sub>: #13 (Roaming not allowed in this tracking area) The UE shall set the
                   5GS update status to 5U3 ROAMING NOT ALLOWED (and shall store it
-                  according to subclause5.1.3.2.2) and shall delete the list of equivalent PLMNs (if available).
+                  according to subclause 5.1.3.2.2) and shall delete the list of equivalent PLMNs (if available).
                 </p>
             </div>
           </div>
@@ -620,7 +620,7 @@
           </p>
           <div class="custom-box">
             <div class="custom-text-block">
-                <p>T<sub>1</sub>: #73 (Serving network not authorized). · · · 
+                <p>T<sub>1</sub>: #73 (Serving network not authorized). ... 
                   The UE shall delete the list of equivalent PLMNs,
                   shall reset the registration attempt counter. For
                   3GPP access the UE shall enter the state 5GMM-DEREGISTERED.PLMN-SEARCH, and for 
@@ -632,11 +632,11 @@
                 </p>
             </div>
             <div class="custom-text-block">
-                <p>T<sub>2</sub>: #73 (Serving network not authorized). · · · The UE shall
+                <p>T<sub>2</sub>: #73 (Serving network not authorized). ... The UE shall
                   delete the list of equivalent PLMNs and store the PLMN
                   identity in the forbidden PLMN list as specified in subclause 5.3.13A 
                   and if the UE is configured to use timer
-                  T3245 then the UE shall start timer T3245 and proceed as described in clause 5.3.19a.1
+                  T3245 then the UE shall start timer T3245 and proceed as described in clause 5.3.19a.1.
                 </p>
             </div>
           </div>
